# MXMessage

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  apply-box-wrapping.py  box-config.json  generate-common.py  generate-module.sh  generate.sh
examples/: debug_deserialization.rs  error_collection.rs  pacs008_example.rs  sample_generation_custom.rs  validation_example.rs  xml_generation.rs  xml_serialization.rs
src/: app_document.rs  app_header.rs  camt_027_001_07.rs  camt_028_001_09.rs  camt_029_001_09.rs  camt_052_001_08.rs  camt_053_001_08.rs  camt_056_001_08.rs  camt_057_001_06.rs  camt_998_001_03.rs  common.rs  document.rs  error.rs  lib.rs  message_registry.rs  mx_envelope.rs  pacs_008_001_08.rs  pacs_008_001_13.rs  pacs_009_001_08.rs  parse_result.rs  sample.rs  scenario_config.rs  validation.rs  xml.rs
src/document/: admi_024_001_01.rs  camt_025_001_08.rs  camt_029_001_09.rs  camt_052_001_08.rs  camt_053_001_08.rs  camt_054_001_08.rs  camt_055_001_08.rs  camt_056_001_08.rs  camt_057_001_06.rs  camt_058_001_08.rs  camt_060_001_05.rs  camt_105_001_02.rs  camt_105_001_02_mc.rs  camt_106_001_02.rs  camt_106_001_02_mc.rs  camt_107_001_01.rs  camt_108_001_01.rs  camt_109_001_01.rs  mod.rs  pacs_002_001_10.rs  pacs_003_001_08.rs  pacs_004_001_09.rs  pacs_008_001_08.rs  pacs_008_001_08_stp.rs  pacs_009_001_08.rs  pacs_009_001_08_adv.rs  pacs_009_001_08_cov.rs  pacs_010_001_03.rs  pacs_010_001_03_mc.rs  pain_001_001_09.rs  pain_002_001_10.rs  pain_008_001_08.rs
src/header/: bah_admi_024_001_01.rs  bah_camt_025_001_08.rs  bah_camt_029_001.rs  bah_camt_052_001_08.rs  bah_camt_053_001_08.rs  bah_camt_054_001.rs  bah_camt_055_001_08.rs  bah_camt_056_001_08.rs  bah_camt_058_001_08.rs  bah_camt_105_001_02.rs  bah_camt_105_001_02_mc.rs  bah_camt_106_001_02.rs  bah_camt_106_001_02_mc.rs  bah_camt_107_001_01.rs  bah_camt_108_001_01.rs  bah_camt_109_001_01.rs  bah_pacs_003_001_08.rs  bah_pacs_008_001_08_stp.rs  bah_pacs_009_001_08_adv.rs  bah_pacs_009_001_08_cov.rs  bah_pacs_010_001_03.rs  bah_pain_001_001_09.rs  bah_pain_002_001_10.rs  bah_pain_008_001_08.rs  mod.rs
src/plugin/: README.md  common.rs  generate.rs  mod.rs  parse.rs  publish.rs  validate.rs
test_direct/: test.rs
test_scenarios/: README.md
test_scenarios/camt025/: central_bank_rate_notification.json  deposit_rate_change.json  fx_rate_update.json  index.json  loan_rate_adjustment.json  multi_product_rate_change.json
test_scenarios/camt027/: cbpr_cancellation.json  cbpr_inquiry.json  index.json
test_scenarios/camt028/: cbpr_payment_response.json  index.json  regulatory_notification.json  settlement_instructions_update.json  system_maintenance_notice.json
test_scenarios/camt029/: answer_cancellation.json  answer_inquiry_response.json  answer_pending_investigation.json  answer_rejection.json  cancellation_accepted.json  cancellation_rejected.json  cbpr_cancellation_response.json  index.json  inquiry_response.json  no_payment_found.json  partial_cancellation.json
test_scenarios/camt052/: daily_balance_report.json  index.json  intraday_liquidity_report.json  (+4 more)
tests/: end2end.rs  integration_tests.rs  mx_xml_sample_test.rs  round_trip_test.rs
xsd/: camt.998.001.03.xsd
(+180 files in other folders)
