[package]
name = "mx-message"
version = "3.0.6"
edition = "2024"
exclude = [".DS_Store", "/target", ".vscode", ".github"]
authors = ["Plasmatic Engineering <shankar@goplasmatic.io>"]
license = "Apache-2.0"
description = "A fast, type-safe Rust implementation of MXMessage for parsing MX messages."
readme = "README.md"
homepage = "https://github.com/GoPlasmatic/MXMessage"
repository = "https://github.com/GoPlasmatic/MXMessage"
keywords = ["mx", "message", "parsing", "iso20022"]
categories = ["data-structures", "development-tools", "parsing"]


[dependencies]
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.38", features = ["serialize", "overlapped-lists"] }

# Sample generation dependencies
datafake-rs = "0.1.5"

[dev-dependencies]
tempfile = "3.21"
