[package]
name = "mx-message"
version = "3.1.4"
edition = "2024"
exclude = [".DS_Store", "/target", ".vscode", ".github"]
authors = ["Plasmatic Engineering <shankar@goplasmatic.io>"]
license = "Apache-2.0"
description = "A fast, type-safe Rust implementation of MXMessage for parsing MX messages."
readme = "README.md"
homepage = "https://github.com/GoPlasmatic/MXMessage"
repository = "https://github.com/GoPlasmatic/MXMessage"
keywords = ["mx", "message", "parsing", "iso20022"]
categories = ["data-structures", "development-tools", "parsing"]


[dependencies]
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.36", features = ["serialize"] }
thiserror = "2.0"

# Sample generation dependencies
datafake-rs = "0.2"

# Data validation and workflow
datalogic-rs = "4.0"
dataflow-rs = "2.0"

# Plugin support
async-trait = "0.1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.23"
tokio = { version = "1.48", features = ["rt", "macros", "test-util"] }
